--- a/lab3/src/styles.css
+++ b/lab3/src/styles.css
@@ -11,6 +11,11 @@ body {
     text-align: center;
 }
 
+.group-page {
+    text-align: center;
+}
+
+
 .navigation-bar {
     text-align: center;
     font-size: 3rem;
