--- a/lab3/src/LoginPage.css
+++ b/lab3/src/LoginPage.css
@@ -72,3 +72,14 @@
     padding: 1rem 2rem 1rem 2rem;
     font-size: 1.5rem;
 }
+
+.info-text {
+    margin-top: 2rem;
+    margin-bottom: 3rem;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    align-self: center;
+    justify-self: center;
+    font-size: 3rem;
+}
