--- a/lab3/src/StudentForm.css
+++ b/lab3/src/StudentForm.css
@@ -8,6 +8,7 @@
     text-align: left;
     background-color: rgba(255, 255, 255, 0.75);
     color: rgba(0, 0, 0, 0.75);
+    cursor: pointer;
 }
 
 .student-name {
